Update website: rename to work, rotate logo, update carousel images, replace crypto jobs with restaurant jobs

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,8 @@ header {
 .mcd-logo-img {
     height: 40px;
     width: auto;
+    transform: rotate(180deg) !important;
+    display: inline-block;
 }
 
 nav ul {
